Overlapping problems of text and buttons were solved.

--- a/frontend/src/app/profile/pages/public/public.page.scss
+++ b/frontend/src/app/profile/pages/public/public.page.scss
@@ -1,3 +1,42 @@
+
+// Toolbar and routing styling
+.router-container
+{
+  font-family: 'Oswald', sans-serif;
+  font-size: 25px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.route-btns
+{
+  width: 50%;
+  height: 100%;
+  display: flex;
+}
+.route-btn
+{
+  margin-left: 5px;
+  padding: 5px;
+  background-color: white;
+  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.3);
+  color: black;
+  font-size: 15px;
+}
+.route-title
+{
+  width: calc(50% - 5px);
+  margin-left: 5px;
+}
+
+
+
+
+// Profile Public Styling
 .container
 {
   display: flex;
